# langgraph_experiments

./: .gitignore  pyproject.toml  quickstart.py
notes/local-models-mac-studio/: README.md  chat-extract-2026-05-01-structured-output-research.md  source-manifest.md
notes/local-models-mac-studio/artifacts/: marimo_test_key_pyproject.toml  structured_output_eval.py
src/: examples_pytests.py  quickstart.py
tests/: pytest study guide.md  test_examples_pytest.py  test_fixture.py
