[project]
name = "langgraph-experiments"
version = "0.1.0"
description = "LangGraph experiments with AI71 Foundry"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "python-dotenv>=1.0",
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
]
